examples/test/testpolicy10840.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10840
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key33: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value0
      podSelector:
        matchLabels:
          key14: value20
          key11: value11
          key19: value43
